# customer-analytics-data-platform

./: .env.example  .gitignore  README.md  pyproject.toml
dashboard/: app.py  database.py  filters.py
dashboard/pages/: 1_Customers.py  2_Products.py  3_Channels.py  4_Discounts.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/marts/: channel_sales_summary.sql  customer_product_summary.sql  customer_summary.sql  discount_summary.sql  product_sales_summary.sql  schema.yml
dbt/models/staging/: schema.yml  source.yml  stg_customer_sessions.sql  stg_profiles.sql
docs/: data-discovery-and-modeling.md  gold-layer.md  ingestion-architecture.md
ingestion/: README.md  main.py
ingestion/config/: constants.py  settings.py
ingestion/database/: database_initializer.py  duckdb_client.py
ingestion/models/: datasets.py
ingestion/pipelines/: checkpoint.py  service.py  writer.py
ingestion/sql/: init.sql
ingestion/utils/: logger.py
